# PEEWEE

./: 111.xls  _777.xls.rpt  _Спецификация отправочных марок.xls  db.py  faza.py  main.py  migrations.json  models.py  pyproject.toml  schemas.py  tekla.py  Шоурум.xls  Электро.xls
migrations/: 0001_migration_202112080000.py  0001_migration_202112110019.py
