[tool.poetry]
name = "crm"
version = "0.1.0"
description = ""
authors = ["viktor <bnd-baza@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
peewee = "^3.14.8"
PyMySQL = "^1.0.2"
peewee-migrations = "^0.3.19"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
